# various_physics_problems

./: .gitignore  README.md  TODO.md  pyproject.toml  self_note.md
physics_1/: MaterialsNote.md
physics_1/ch2/prob_51/: prob_51.tex
physics_1/ch2/prob_85/: prob_85.tex
physics_1/ch4/prob_45/: prob_45.tex
physics_1/ch4/prob_75/: prob_75.tex
thermal_physics/: MaterialsNote.md
thermal_physics/ch1/prob_01/: prob_01.tex
thermal_physics/ch1/prob_16/: prob_16.tex
thermal_physics/ch1/prob_20/: prob_20.tex
thermal_physics/ch1/prob_34/: prob_34.tex
thermal_physics/ch6/prob_02/: prob_02.tex
thermal_physics/ch6/prob_03/: plot_partition.py  prob_03.tex
thermal_physics/ch6/prob_06/: prob_06.tex
thermal_physics/ch6/prob_12/: prob_12.tex
thermal_physics/ch6/prob_15/: prob_15.tex
thermal_physics/ch6/prob_16/: prob_16.tex
thermal_physics/ch6/prob_20/: prob_20.tex
thermal_physics/ch6/prob_23/: calculate_Z.py  prob_23.tex
thermal_physics/ch6/prob_26/: prob_26.tex
thermal_physics/ch6/prob_28/: prob_28.tex  script.py
thermal_physics/ch6/prob_31/: prob_31.tex
thermal_physics/ch6/prob_36/: prob_36.tex  quick_integration.py
thermal_physics/ch6/prob_38/: prob_38.tex  quick_integration.py
thermal_physics/ch6/prob_41/: prob_41.tex  quick_integration.py
thermal_physics/ch6/prob_48/: prob_48.tex
thermal_physics/ch6/prob_49/: prob_49.tex
thermal_physics/ch7/prob_03/: prob_03.tex
thermal_physics/ch7/prob_07/: prob_07.tex
thermal_physics/ch7/prob_08/: prob_08.tex
thermal_physics/ch7/prob_09/: prob_09.tex
thermal_physics/ch7/prob_10/: prob_10.tex
(+20 files in other folders)
